--- a/Saas Project 1.2/index.html
+++ b/Saas Project 1.2/index.html
@@ -36,6 +36,7 @@
     <div class="parallax-content baner-content" id="home">
         <div class="container">
             <div class="first-content">
+                <a><img src="img/WhatsApp%20Image%202021-01-05%20at%201.22.29%20AM.jpeg" width="200px" height="200px" alt="ProBoat Hull"></a>
                 <h1>ProBoat Hull</h1>
                 <span><em>Our Business Is Your Service</em></span>
                 <div class="primary-button">
